# course3-laba1

./: .gitignore  Books.cpp  Books.h  CMakeLists.txt  Check.h  Fantast.cpp  Fantast.h  Keeper.h  Novel.cpp  Novel.h  Poet.cpp  Poet.h  README.md  change.txt  main  main.cpp  text.txt
